--- a/generators/app/templates/tsconfig.json
+++ b/generators/app/templates/tsconfig.json
@@ -1,26 +1,37 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx"
-  },
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+      "rootDir": "src",
+      "target": "ES6",
+      "moduleResolution": "node",
+      "jsx": "react",
+      "allowJs": true,
+      "declaration": false,
+      "esModuleInterop": true,
+      "downlevelIteration": true,
+      "sourceMap": true,
+      "baseUrl": "./",
+      "typeRoots": ["./src/typings", "./node_modules/@types"],
+      "lib": ["ES2015", "DOM"],
+      "paths": {
+        "antd-mobile": ["src/index.ts"],
+        "antd-mobile/src/*": ["src/*"],
+        "antd-mobile/es/*": ["src/*"],
+        "demos": ["src/demos/index.ts"],
+        "testing": ["src/tests/testing"]
+      },
+      "allowSyntheticDefaultImports": true,
+      "skipLibCheck": true,
+      "strictNullChecks": true,
+      "noImplicitAny": true,
+      "resolveJsonModule": true
+    },
+    "include": ["src"],
+    "exclude": ["node_modules", "lib", "es", "dist", ".dumi"],
+    "ts-node": {
+      "compilerOptions": {
+        "module": "CommonJS",
+        "resolveJsonModule": true,
+        "noImplicitAny": false
+      }
+    }
 }
